--- a/index.html
+++ b/index.html
@@ -4,86 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <style>
-        @font-face {
-            font-family: 'Space Grotesk';
-            src: url('./SpaceGrotesk.woff2') format('woff2');
-        }
-
-        body,
-        html {
-            font-family: 'Space Grotesk', sans-serif;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-        }
-
-        .container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-        }
-
-        .background-image {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-image: url('https://studywithme.io/aesthetic-pomodoro-timer/3ce5f595f1a64dc1c1ee.jpg');
-            background-size: cover;
-            background-position: center;
-            opacity: 1.0;
-        }
-
-        .center-box {
-            position: absolute;
-            top: 45%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-            color: white;
-        }
-
-        .center-box p {
-            font-size: 125px;
-            font-family: "Space Grotesk", sans-serif;
-            font-weight: bold;
-            font-variant-numeric: tabular-nums;
-            margin-bottom: 1vh;
-            text-align: center;
-            justify-content: center;
-            user-select: none;
-        }
-
-        button {
-            background-color: white;
-            color: black;
-            font-family: "Space Grotesk", sans-serif;
-            font-weight: bold;
-            border-radius: 25px;
-            padding: 10px 20px;
-            height: 45px;
-            line-height: 40px;
-            min-width: 120px;
-            text-align: center;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            border: none;
-            font-size: 25px;
-            box-shadow: 3px 4px rgba(0, 0, 0, 0.3);
-            transition: opacity 0.3s ease;
-        }
-
-        button:hover {
-            opacity: 0.7;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <title>ZenZone</title>
 </head>
 
 <body>
@@ -96,80 +18,8 @@
         </div>
     </div>
 
-    <script>
-        let buttonText = "start";
-        let timerIsWork = false;
-        let timer;
-        let currentTimeSpan = { minutes: 25, seconds: 0 };
-        const btnStart = document.getElementById('btnStart');
-        const btnRestart = document.getElementById('btnRestart');
-
-        function updateTimerDisplay() {
-            document.getElementById("timerDisplay").innerText = `${currentTimeSpan.minutes.toString().padStart(2, '0')}:${currentTimeSpan.seconds.toString().padStart(2, '0')}`;
-        }
-
-        function timerCallback() {
-            if (timerIsWork) {
-                if (currentTimeSpan.minutes === 0 && currentTimeSpan.seconds === 0) {
-                    stopTimer();
-                    return;
-                }
-
-                if (currentTimeSpan.seconds === 0) {
-                    currentTimeSpan.minutes--;
-                    currentTimeSpan.seconds = 59;
-                } else {
-                    currentTimeSpan.seconds--;
-                }
-
-                updateTimerDisplay();
-            }
-        }
-
-        function startTimer() {
-            buttonText = "pause";
-            timerIsWork = true;
-            timer = setInterval(timerCallback, 1000);
-        }
-
-        function stopTimer() {
-            buttonText = "start";
-            timerIsWork = false;
-            clearInterval(timer);
-        }
-
-        btnStart.addEventListener("click", function () {
-
-            if (!timerIsWork) {
-                startTimer();
-            } else {
-                stopTimer();
-            }
-
-            btnStart.innerText = buttonText;
-            updateTimerDisplay();
-        });
-
-        btnRestart.addEventListener("click", function () {
-            currentTimeSpan.minutes = 25;
-            currentTimeSpan.seconds = 0;
-            updateTimerDisplay();
-        });
-
-       
-    </script>
-
-    <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/sw.js')
-                .then(function (registration) {
-                    console.log('Service Worker зарегистрирован успешно:', registration);
-                })
-                .catch(function (error) {
-                    console.error('Ошибка при регистрации Service Worker:', error);
-                });
-        }
-    </script>
+    <script src="serviceWorkerRegistration.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
