Fix: on reset - turn off timer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="center-box">
             <p id="timerDisplay">25:00</p>
             <button id="btnStart">start</button>
-            <button id="btnRestart">reset</button>
+            <button id="btnReset">reset</button>
         </div>
     </div>
 
