--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <p id="timerDisplay">00:00</p>
             <button id="btnStart">start</button>
             <button id="btnReset">reset</button>
+            <button class = "button-sphere" id="btnTimeIncrease" onclick="increaseTime()">+</button>
+            <button class = "button-sphere" id="btnTimeDecrease" onclick="decreaseTime()">-</button>
         </div>
     </div>
 
