Add new btn design

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="center-box">
             <p id="timerDisplay">00:00</p>
             <button id="btnStart">start</button>
-            <button id="btnReset">reset</button>
-            <button class = "button-sphere" id="btnTimeIncrease" onclick="increaseTime()">+</button>
-            <button class = "button-sphere" id="btnTimeDecrease" onclick="decreaseTime()">-</button>
+            <button class = "button-icon" id="btnReset"></button>
+            <button class = "button-icon" id="btnTimeIncrease" onclick="increaseTime()"></button>
+            <button class = "button-icon" id="btnTimeDecrease" onclick="decreaseTime()"></button>
         </div>
     </div>
 
