--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <p id="timerDisplay">00:00</p>
             <button id="btnStart">start</button>
             <button class = "button-icon" id="btnReset"></button>
-            <button class = "button-icon" id="btnTimeIncrease" onclick="increaseTime()"></button>
-            <button class = "button-icon" id="btnTimeDecrease" onclick="decreaseTime()"></button>
+            <button class = "button-icon" id="btnTimeIncrease" onclick="increaseDefaultTime()"></button>
+            <button class = "button-icon" id="btnTimeDecrease" onclick="decreaseDefaultTime()"></button>
         </div>
     </div>
 
