--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
             <p id="timerDisplay">00:00</p>
             <button id="btnStart">start</button>
             <button class = "button-icon" id="btnReset"></button>
-            <button class = "button-icon" id="btnTimeIncrease" onclick="increaseTime()"></button>
-            <button class = "button-icon" id="btnTimeDecrease" onclick="decreaseTime()"></button>
+            <button class = "button-icon" id="btnTimeIncrease"></button>
+            <button class = "button-icon" id="btnTimeDecrease"></button>
         </div>
     </div>
 
+    <script type="module" src="timer.js"></script>
     <script src="serviceWorkerRegistration.js"></script>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
