Add time day text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <div id="timerContainer">
         <div id="timeWork">00:00</div>
         <div id="timerDisplay">00:00</div>
-        <div id="timeDay">00:00</div>
+        <div id="timeDayContainer">
+            <div id="timeDay">00:00</div>
+            <div id="timeDaySeconds">00</div>
+        </div>
     </div>
     <div id="buttonContainer">
         <button id="btnStart">start</button>
