Add day work time text, and some refactoring

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <button id="btnTimeDecrease"><img src="icon_sign_minus.svg" alt="Decrease Time"></button>
     </div>
     <script src="serviceWorkerRegistration.js"></script>
+    <script src="tools.js"></script>
     <script type="module" src="dayliTime.js"></script>
     <script type="module" src="day.js"></script>
     <script type="module" src="script.js"></script>
