Add app states selector

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <div id="buttonContainerTop">
-        <button id="btn1">work</button>
-        <button id="btn2">break</button>
-        <button id="btn3">chill</button>
+        <button id="btnWork">work</button>
+        <button id="btnBreak">break</button>
+        <button id="btnChill">chill</button>
     </div>
     <div id="timerContainer">
         <div id="timeWork">00:00</div>
@@ -30,6 +30,8 @@
     </div>
     <script src="serviceWorkerRegistration.js"></script>
     <script src="tools.js"></script>
+    <script src="state.js"></script>
+    <script type="module" src="stateSelector.js"></script>
     <script type="module" src="dayliTime.js"></script>
     <script type="module" src="day.js"></script>
     <script type="module" src="script.js"></script>
