--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <div id="buttonContainerTop">
-        <button id="btnWork">work</button>
-        <button id="btnBreak">break</button>
-        <button id="btnChill">chill</button>
+        <button id="btnWork" class = 'unselect'>work</button>
+        <button id="btnBreak" class = 'unselect'>break</button>
+        <button id="btnChill" class = 'unselect'>chill</button>
     </div>
     <div id="timerContainer">
         <div id="timeWork">00:00</div>
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div id="buttonContainer">
-        <button id="btnStart">start</button>
+        <button id="btnStart" class = 'select'>start</button>
         <button id="btnReset"><img src="icon_refresh.svg" alt="Reset"></button>
         <button id="btnTimeIncrease"><img src='icon_sign_plus.svg' alt="Increase Time"></button>
         <button id="btnTimeDecrease"><img src="icon_sign_minus.svg" alt="Decrease Time"></button>
