--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
     </div>
     <script src="serviceWorkerRegistration.js"></script>
     <script src="tools.js"></script>
-    <script src="state.js"></script>
+    <script type="module" src="init.js"></script>
+    <script type="module" src="notify.js"></script>
+    <script type="module" src="app.js"></script>
+    <script type="module" src="db.js"></script>
     <script type="module" src="stateSelector.js"></script>
     <script type="module" src="dayliTime.js"></script>
     <script type="module" src="day.js"></script>
