--- a/index.html
+++ b/index.html
@@ -9,18 +9,34 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="background-image"></div>
-        <div class="center-box">
-            <p id="timerDisplay">00:00</p>
-            <button id="btnStart">start</button>
-            <button class = "button-icon" id="btnReset"></button>
-            <button class = "button-icon" id="btnTimeIncrease""></button>
-            <button class = "button-icon" id="btnTimeDecrease""></button>
+    <div id="buttonContainerTop">
+        <button id="btnWork" class = 'unselect'>work</button>
+        <button id="btnBreak" class = 'unselect'>break</button>
+        <button id="btnChill" class = 'unselect'>chill</button>
+    </div>
+    <div id="timerContainer">
+        <div id="timeWork">00:00</div>
+        <div id="timerDisplay">00:00</div>
+        <div id="timeDayContainer">
+            <div id="timeDay">00:00</div>
+            <div id="timeDaySeconds">00</div>
         </div>
     </div>
+    <div id="buttonContainer">
+        <button id="btnStart" class = 'select'>start</button>
+        <button id="btnReset"><img src="icon_refresh.svg" alt="Reset"></button>
+        <button id="btnTimeIncrease"><img src='icon_sign_plus.svg' alt="Increase Time"></button>
+        <button id="btnTimeDecrease"><img src="icon_sign_minus.svg" alt="Decrease Time"></button>
+    </div>
     <script src="serviceWorkerRegistration.js"></script>
-    <script type="module" src="script.js"></script>
+    <script src="tools.js"></script>
+    <script type="module" src="init.js"></script>
+    <script type="module" src="notify.js"></script>
+    <script type="module" src="app.js"></script>
+    <script type="module" src="db.js"></script>
+    <script type="module" src="stateSelector.js"></script>
+    <script type="module" src="dayliTime.js"></script>
+    <script type="module" src="day.js"></script>
 </body>
 
 </html>
